Test SCSS imports

--- a/client/imports/demo/demo.component.html
+++ b/client/imports/demo/demo.component.html
@@ -6,3 +6,5 @@ This is the available data:
         {{item.name}} ({{item.age}})
     </li>
 </ul>
+
+<p class="red-text">This line should be red</p>
